feat: update MongoDB queries to use returnDocument: 'after' for findOneAndUpdate
